# atomate2

./: .buildinfo  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ADMIN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INCAR  LICENSE  POTCAR  README.md  XDATCAR  atoms.traj  citation.cff  citation_chemrxiv.bib  codecov.yml  codecov_cli.yml  coverage.xml  custodian.json  final_atoms_object.xyz  genindex.html  in.kpts  index.html  init.in  jdftxcov.xml  objects.inv  output  pre-commit  py-modindex.html  pyproject.toml  requirements-optional.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: index.doctree
.doctrees/__intersphinx_cache__/: jobflow_objects.inv  python_objects.inv
.doctrees/about/: changelog.doctree  contributing.doctree  contributors.doctree  license.doctree
.doctrees/dev/: abinit_tests.doctree  dev_install.doctree  forcefields.doctree  input_sets.doctree  vasp_tests.doctree  workflow_tutorial.doctree
.doctrees/reference/: atomate2.abinit.doctree  atomate2.abinit.flows.doctree  atomate2.abinit.jobs.doctree  atomate2.abinit.schemas.doctree  atomate2.abinit.sets.doctree  atomate2.abinit.utils.doctree  atomate2.aims.doctree  atomate2.aims.files.TYPE_CHECKING.doctree  atomate2.aims.files.cleanup_aims_outputs.doctree  atomate2.aims.files.copy_aims_outputs.doctree  atomate2.aims.files.doctree  atomate2.aims.files.write_aims_input_set.doctree  atomate2.aims.flows.anharmonicity.AnharmonicityMaker.doctree  atomate2.aims.flows.anharmonicity.TYPE_CHECKING.doctree  atomate2.aims.flows.anharmonicity.doctree  atomate2.aims.flows.core.DoubleRelaxMaker.doctree  atomate2.aims.flows.core.TYPE_CHECKING.doctree  atomate2.aims.flows.core.doctree  atomate2.aims.flows.doctree  atomate2.aims.flows.elastic.ElasticMaker.doctree  atomate2.aims.flows.elastic.TYPE_CHECKING.doctree  atomate2.aims.flows.elastic.doctree  atomate2.aims.flows.eos.AimsEosMaker.doctree  atomate2.aims.flows.eos.TYPE_CHECKING.doctree  atomate2.aims.flows.eos.doctree  atomate2.aims.flows.gw.GWConvergenceMaker.doctree  atomate2.aims.flows.gw.doctree  atomate2.aims.flows.phonons.PhononMaker.doctree  atomate2.aims.flows.phonons.TYPE_CHECKING.doctree  atomate2.aims.flows.phonons.doctree  atomate2.aims.jobs.base.BaseAimsMaker.doctree  atomate2.aims.jobs.base.TYPE_CHECKING.doctree  atomate2.aims.jobs.base.doctree  atomate2.aims.jobs.convergence.CONVERGENCE_FILE_NAME.doctree  atomate2.aims.jobs.convergence.ConvergenceMaker.doctree  atomate2.aims.jobs.convergence.TYPE_CHECKING.doctree  atomate2.aims.jobs.convergence.doctree  atomate2.aims.jobs.core.BandStructureMaker.doctree  atomate2.aims.jobs.core.GWMaker.doctree  atomate2.aims.jobs.core.RelaxMaker.doctree  (+883 more)
.doctrees/user/: addons.doctree  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md  classical_md_requirements.txt  conda_requirements.txt  dependabot-bot.yml  dependabot.yml  release.yml
_modules/: index.html
_static/: documentation_options.js
about/: changelog.html  contributing.html  contributors.html  license.html
applications/: __init__.py  mof.py
atomate2/: settings.py
dev/: abinit_tests.html  dev_install.html  forcefields.html  input_sets.html  vasp_tests.html  workflow_tutorial.html
docs/: _config.yml  _toc.yml  conf.py  index.md
inset_write/: Input_Dict
job_2024-06-28-09-03-30-163498-50004/: bulk_modulus_temperature.eps  gibbs_temperature.eps  gruneisen_temperature.eps  heat_capacity_P_numerical.eps  helmholtz_volume.eps  thermal_expansion.eps  volume_temperature.eps
job_2024-06-28-09-12-28-974839-51647/: transformations.json
job_2024-06-28-10-05-34-814555-88686/: bulk_modulus_temperature.eps  gibbs_temperature.eps  gruneisen_temperature.eps  heat_capacity_P_numerical.eps  helmholtz_volume.eps  thermal_expansion.eps  volume_temperature.eps
reference/: atomate2.abinit.flows.html  atomate2.abinit.html  atomate2.abinit.jobs.html  atomate2.abinit.schemas.html  atomate2.abinit.sets.html  atomate2.abinit.utils.html  atomate2.aims.files.TYPE_CHECKING.html  atomate2.aims.files.cleanup_aims_outputs.html  atomate2.aims.files.copy_aims_outputs.html  atomate2.aims.files.html  atomate2.aims.files.write_aims_input_set.html  atomate2.aims.flows.anharmonicity.AnharmonicityMaker.html  atomate2.aims.flows.anharmonicity.TYPE_CHECKING.html  atomate2.aims.flows.anharmonicity.html  atomate2.aims.flows.core.DoubleRelaxMaker.html  atomate2.aims.flows.core.TYPE_CHECKING.html  atomate2.aims.flows.core.html  atomate2.aims.flows.elastic.ElasticMaker.html  atomate2.aims.flows.elastic.TYPE_CHECKING.html  atomate2.aims.flows.elastic.html  atomate2.aims.flows.eos.AimsEosMaker.html  atomate2.aims.flows.eos.TYPE_CHECKING.html  atomate2.aims.flows.eos.html  atomate2.aims.flows.gw.GWConvergenceMaker.html  atomate2.aims.flows.gw.html  atomate2.aims.flows.html  atomate2.aims.flows.phonons.PhononMaker.html  atomate2.aims.flows.phonons.TYPE_CHECKING.html  atomate2.aims.flows.phonons.html  atomate2.aims.html  atomate2.aims.jobs.base.BaseAimsMaker.html  atomate2.aims.jobs.base.TYPE_CHECKING.html  atomate2.aims.jobs.base.html  atomate2.aims.jobs.convergence.CONVERGENCE_FILE_NAME.html  atomate2.aims.jobs.convergence.ConvergenceMaker.html  atomate2.aims.jobs.convergence.TYPE_CHECKING.html  atomate2.aims.jobs.convergence.html  atomate2.aims.jobs.core.BandStructureMaker.html  atomate2.aims.jobs.core.GWMaker.html  atomate2.aims.jobs.core.RelaxMaker.html  (+883 more)
src/: inputs.in  jdftx.out
tests/: .pytest-split-durations  conftest.py
tutorials/: __init__.py  blob_storage.ipynb  grueneisen_workflow.ipynb  lammps_workflow.ipynb  lobster_workflow.ipynb  lobster_workflow.py  materials_project_workflows.ipynb  mock_aims.py  mock_lobster.py  mock_vasp.py  openmm_tutorial.ipynb  phonon_worflow_aims.ipynb  phonon_workflow.ipynb  phonon_workflow_aims.ipynb  qha_workflow.ipynb  qha_workflow.py  torchsim_tutorial.ipynb  tutorials.md
user/: addons.html  atomate-1-vs-2.html  docs_schemas_emmet.html  execution.html  fireworks.html  index.html  install.html  jobflow-remote.html  key_concepts_overview.html  running-workflows.html
(+3290 files in other folders)
